<resources>
    <string name="app_name">ShoppingCarty</string>
    <string name="countLabel">Кол-во:</string>
    <string name="priceLabel">Цена:</string>
    <string name="roubles">р.</string>
    <string name="totalLabel">Итого:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_dot">.</string>
    <string name="_ok">OK</string>
    <string name="_erase"><![CDATA[<]]></string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
</resources>
